<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bbg"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:background="#00FF00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="6dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/black" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:background="#00FF00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="6dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="12dp">
        <TextView
            android:textSize="30sp"
            android:id="@+id/ForgotPasswordPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:text="@string/forgot_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:paddingTop="20dp"
        android:textSize="25sp"
        android:id="@+id/fpEmailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enterEmailId"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:textSize="25sp"
        android:id="@+id/fpEmailTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_domain_com"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <Button
        android:layout_marginTop="20dp"
        android:background="#FF0000"
        android:textSize="25sp"
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password" />

</LinearLayout>