<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bbg"
    tools:context=".WelcomeActivity">

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:background="#008000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="6dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/black" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:background="#00FF00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        app:cardElevation="6dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="12dp">

        <TextView
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:textAlignment="center"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/black" />
    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:textSize="30sp"
            android:background="#32CD32"
            android:id="@+id/welcomeSignInButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="12dp"
            android:text="@string/sign_in" />

        <Button
            android:visibility="gone"
            android:id="@+id/welcomeSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/welcomeSignInButton"
            android:layout_centerInParent="true"
            android:text="@string/sign_up" />

        <com.google.android.gms.ads.AdView
            android:layout_gravity="center"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-2590445396872568/7861144771">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>





</LinearLayout>